
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct strbuf {char* buf; int len; } ;
struct credential {int quit; void* path; void* host; void* protocol; void* password; void* username; } ;
typedef int FILE ;


 scalar_t__ EOF ;
 struct strbuf STRBUF_INIT ;
 int credential_from_url (struct credential*,char*) ;
 int free (void*) ;
 int git_config_bool (char*,char*) ;
 scalar_t__ strbuf_getline_lf (struct strbuf*,int *) ;
 int strbuf_release (struct strbuf*) ;
 char* strchr (char*,char) ;
 int strcmp (char*,char*) ;
 int warning (char*,char*) ;
 void* xstrdup (char*) ;

int credential_read(struct credential *c, FILE *fp)
{
 struct strbuf line = STRBUF_INIT;

 while (strbuf_getline_lf(&line, fp) != EOF) {
  char *key = line.buf;
  char *value = strchr(key, '=');

  if (!line.len)
   break;

  if (!value) {
   warning("invalid credential line: %s", key);
   strbuf_release(&line);
   return -1;
  }
  *value++ = '\0';

  if (!strcmp(key, "username")) {
   free(c->username);
   c->username = xstrdup(value);
  } else if (!strcmp(key, "password")) {
   free(c->password);
   c->password = xstrdup(value);
  } else if (!strcmp(key, "protocol")) {
   free(c->protocol);
   c->protocol = xstrdup(value);
  } else if (!strcmp(key, "host")) {
   free(c->host);
   c->host = xstrdup(value);
  } else if (!strcmp(key, "path")) {
   free(c->path);
   c->path = xstrdup(value);
  } else if (!strcmp(key, "url")) {
   credential_from_url(c, value);
  } else if (!strcmp(key, "quit")) {
   c->quit = !!git_config_bool("quit", value);
  }





 }

 strbuf_release(&line);
 return 0;
}
